Closed
Bug 38491
Opened 25 years ago
Closed 25 years ago
Flowed msgs double-spaced in reader
Categories
(MailNews Core :: MIME, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: BenB, Assigned: nhottanscp)
Details
(Keywords: regression, Whiteboard: [nsbeta2+])
Reproduce:
- Build 2000-05-07
1. Enable Pref|Mailnews|View|Variable width font
2. View a format=flowed msg (from Mozilla or Eudora).
Actual result:
- The msg appears in fixed width font
- Lines are double-spaced, i.e. there's an empty line between every two text
lines.
Reporter | ||
Updated•25 years ago
|
Summary: Flowed msgs double-spaced → Flowed msgs double-spaced in reader
Comment 1•25 years ago
|
||
I don't see any double space in a current build on win32. Have you checked with
a clean tree (assuming that you are doing development on your test build).
Anyway, I don't understand whether the problem is in composition or in viewing?
Is the problem in the raw mail or is it double spaced only in the display
window?
Reporter | ||
Comment 2•25 years ago
|
||
Daniel,
I used a nightly build from ftp.mozilla.org. The bug also appears with a mail
you sent my with Eudora, so it's definitely in the reader.
Assignee | ||
Comment 3•25 years ago
|
||
I think this is a side effect of the default font changed I made.
Reassign to me.
Assignee: rhp → nhotta
Assignee | ||
Updated•25 years ago
|
Reporter | ||
Comment 5•25 years ago
|
||
nhotta, I think, the problem are the <br>s and &nsbr;s in mimetpfl.cpp together
with your <pre>. I always considered the &nsbr;s etc. bogus (nothing against
you, Daniel), so I'd be glad, if you'd remove them. Before you alter the code,
be sure to understand the nature of format=flowed, though. Daniel wrote this
class, but I doubt, he'll have time to do this change.
Reporter | ||
Comment 6•25 years ago
|
||
To be fair: the faster way is, of course, to change your <pre> into a <div>
(assuming, there won't be other problems).
Daniel, I don't see &nsbr;s in quotes (e.g. after a reply). Maybe, we can use
this mode for display as well?
Assignee | ||
Comment 7•25 years ago
|
||
> To be fair: the faster way is, of course, to change your <pre> into a <div>
yes, that's I'm going to do, will check in today.
Assignee | ||
Comment 8•25 years ago
|
||
fix checked in, changed to use "div" or "tt" instead of "pre"
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 9•25 years ago
|
||
Ben, I would gladly remove the if I could find an alternative. Do you
have an idea? It need to be a symbol that doesn't break just because the line is
too short and that displays a space.
Reporter | ||
Comment 10•25 years ago
|
||
Daniel, I think, normal spaces together with some kind of special <pre> would do
the trick. I'd try combinations of the CSS properties
font-family: -moz-fixed;
white-space: pre;
white-space: -moz-pre-wrap;
Comment 11•25 years ago
|
||
Verified as fixed on Windows, Linux and Mac using the following:
Win commercial seamonkey build 2000-060909-m17 installed on PIII Win98
Linux commercial seamonkey build 2000-060908-m17 installed on PII RedHat 6.1
MacOS commercial seamonkey build 2000-060908-m17 installed on G3/400 OS 9.04
Flowed messages are not doubled spaced.
Note: there a font & size issue addressed in bug 40547.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•