Changed format=flowed case to call GetMailNewsFont(), also changed to use "div" and "tt" instead of "pre", bug 38491, 38511.